opam-version: "2.0"
name:         "art"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/dinosaure/art"
bug-reports:  "https://github.com/dinosaure/art/issues"
dev-repo:     "git+https://github.com/dinosaure/art.git"
doc:          "https://dinosaure.github.io/art/"
license:      "MIT"
synopsis:     "Adaptive Radix Tree"
description: """
Implementation of an Adaptive Radix Tree in OCaml. A fast hash-table
like structure plus the order."""

build: [ "dune" "build" "-p" name "-j" jobs ]
run-test: [ "dune" "runtest" "-p" name "-j" jobs ]

depends: [
  "ocaml"       {>= "4.07.0"}
  "dune"        {>= "2.7.0"}
  "base-bytes"
  "fmt"
  "alcotest"    {with-test}
]
