opam-version: "2.0"
name:         "rowex"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/dinosaure/art"
bug-reports:  "https://github.com/dinosaure/art/issues"
dev-repo:     "git+https://github.com/dinosaure/art.git"
doc:          "https://dinosaure.github.io/art/"
license:      "MIT"
synopsis:     "Adaptive Radix Tree Synchronized"

build: [ "dune" "build" "-p" name "-j" jobs ]
run-test: [ "dune" "runtest" "-p" name "-j" jobs ]

depends: [
  "ocaml"       {>= "4.08.0"}
  "dune"        {>= "2.0.0"}
  "dune-configurator"
  "base-bytes"
  "fmt"
  "alcotest"    {with-test}
  "base-unix"   {with-test}
  "mmap"        {with-test}
  "base64"      {with-test}
  "bos"         {with-test}
  "cmdliner"    {with-test}
]

available: [ arch != "ppc64"
           & arch != "arm32"
	   & arch != "arm64"
	   & arch != "x86_32" ]
