opam-version: "2.0"
name: "rowex"
synopsis: "Adaptive Radix Tree Synchronized"
maintainer: "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors: "Romain Calascibetta <romain.calascibetta@gmail.com>"
license: "MIT"
homepage: "https://github.com/dinosaure/art"
doc: "https://dinosaure.github.io/art/"
bug-reports: "https://github.com/dinosaure/art/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.8.0"}
  "dune-configurator"
  "fmt" {>= "0.8.7"}
  "alcotest" {with-test}
  "mmap" {with-test}
  "base64" {>= "3.0.0" & with-test}
  "bos" {with-test}
  "logs" {>= "0.7.0"}
  "fpath" {>= "0.7.3" & with-test}
  "ocamlfind" {>= "1.8.1" & with-test}
  "rresult" {>= "0.6.0"}
  "cmdliner" {>= "1.1.0"}
  "fpath"
  "mmap"
  "hxd" {>= "0.3.2"}
  "crowbar" {>= "0.2" & with-test}
]
available:
  arch != "ppc64" & arch != "arm32" & arch != "x86_32" & arch != "s390x"
build: ["dune" "build" "-p" name "-j" jobs]
run-test: ["dune" "runtest" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/dinosaure/art.git"
