(library
 (name art_landmarks)
 (public_name art.landmarks)
 (modules art_landmarks)
 (c_names ctz)
 (libraries landmarks fmt)
 (preprocess (pps landmarks.ppx --auto)))

(rule (copy ../lib/art.ml art_landmarks.ml))
(rule (copy ../lib/art.mli art_landmarks.mli))
(rule (copy ../lib/ctz.c ctz.c))

(executable
 (name bench_insert)
 (modules bench_insert)
 (libraries bechamel bechamel-notty notty.unix bechamel-js art))

(rule
 (targets insert.json)
 (action (with-stdout-to %{targets} (run ./bench_insert.exe json))))

(rule
 (targets insert.html)
 (mode promote)
 (action (system "%{bin:bechamel-html} < %{dep:insert.json} > %{targets}")))

(executable
 (name bench_find)
 (modules bench_find)
 (libraries bechamel bechamel-notty notty.unix bechamel-js art))

(rule
 (targets find.json)
 (action (with-stdout-to %{targets} (run ./bench_find.exe json))))

(rule
 (targets find.html)
 (mode promote)
 (action (system "%{bin:bechamel-html} < %{dep:find.json} > %{targets}")))
