(library
 (name art_landmarks)
 (public_name art.landmarks)
 (optional)
 (modules art_landmarks)
 (libraries landmarks fmt)
 (preprocess
  (pps landmarks.ppx --auto)))

(rule
 (copy ../lib/art.ml art_landmarks.ml))

(rule
 (copy ../lib/art.mli art_landmarks.mli))

(executable
 (name bench_insert)
 (modules bench_insert)
 (optional)
 (libraries bechamel bechamel-notty notty.unix bechamel-js art))

(rule
 (targets insert.json)
 (action
  (with-stdout-to
   %{targets}
   (run ./bench_insert.exe json))))

(rule
 (targets insert.html)
 (mode promote)
 (action
  (system "%{bin:bechamel-html} < %{dep:insert.json} > %{targets}")))

(executable
 (name bench_find)
 (modules bench_find)
 (optional)
 (libraries base64 bechamel bechamel-notty notty.unix bechamel-js art))

(rule
 (targets find.json)
 (action
  (with-stdout-to
   %{targets}
   (run ./bench_find.exe json))))

(rule
 (targets find.html)
 (mode promote)
 (action
  (system "%{bin:bechamel-html} < %{dep:find.json} > %{targets}")))
