(library
 (name art_landmarks)
 (public_name art.landmarks)
 (optional)
 (enabled_if
  (= %{profile} benchmark))
 (modules art_landmarks)
 (foreign_stubs
  (language c)
  (names ctz))
 (libraries landmarks fmt)
 (preprocess
  (pps landmarks.ppx --auto)))

(rule
 (copy ../lib/art.ml art_landmarks.ml))

(rule
 (copy ../lib/art.mli art_landmarks.mli))

(rule
 (copy ../lib/ctz.c ctz.c))

(executable
 (name bench_insert)
 (modules bench_insert)
 (optional)
 (enabled_if
  (= %{profile} benchmark))
 (libraries bechamel bechamel-notty notty.unix bechamel-js art))

(rule
 (targets insert.json)
 (enabled_if
  (= %{profile} benchmark))
 (action
  (with-stdout-to
   %{targets}
   (run ./bench_insert.exe json))))

(rule
 (targets insert.html)
 (mode promote)
 (enabled_if
  (= %{profile} benchmark))
 (action
  (system "%{bin:bechamel-html} < %{dep:insert.json} > %{targets}")))

(executable
 (name bench_find)
 (modules bench_find)
 (optional)
 (enabled_if
  (= %{profile} benchmark))
 (libraries base64 bechamel bechamel-notty notty.unix bechamel-js art))

(rule
 (targets find.json)
 (enabled_if
  (= %{profile} benchmark))
 (action
  (with-stdout-to
   %{targets}
   (run ./bench_find.exe json))))

(rule
 (targets find.html)
 (mode promote)
 (enabled_if
  (= %{profile} benchmark))
 (action
  (system "%{bin:bechamel-html} < %{dep:find.json} > %{targets}")))
