(executable
 (name fuzz)
 (modules fuzz)
 (libraries art crowbar))

(executable
 (name monolith)
 (modules monolith)
 (libraries art monolith))

(executable
 (name fuzz_rowex)
 (modules fuzz_rowex)
 (libraries rowex.mem crowbar))

(rule
 (alias runtest)
 (action
  (run ./fuzz.exe)))

(rule
 (alias monolith)
 (action
  (run ./monolith.exe)))

(rule
 (alias runtest)
 (action
  (run ./fuzz_rowex.exe)))
