(executable
 (name fuzz)
 (modules fuzz)
 (ocamlopt_flags
  (:standard -afl-instrument))
 (libraries art crowbar))

(executable
 (name monolith)
 (modules monolith)
 (ocamlopt_flags
  (:standard -afl-instrument))
 (libraries art monolith))

(rule
 (alias runtest)
 (action
  (run ./fuzz.exe)))

(rule
 (alias monolith)
 (action
  (run ./monolith.exe)))
