(library
 (name art)
 (modules art)
 (public_name art)
 (libraries fmt)
 (ocamlopt_flags -O3 -unbox-closures -unbox-closures-factor 20)
 (instrumentation
  (backend bisect_ppx)))

(library
 (name rowex)
 (modules rowex)
 (public_name rowex)
 (libraries hxd.core hxd.string atomic ipc fmt logs)
 (ocamlopt_flags -O3)
 (foreign_stubs
  (language c)
  (flags
   -std=c11
   (:standard)
   (:include sse.sexp))
  (names rowex)))

(library
 (name mem)
 (modules mem)
 (public_name rowex.mem)
 (libraries rowex))

(library
 (name persistent)
 (modules persistent hashset)
 (public_name rowex.persistent)
 (libraries rowex)
 (ocamlopt_flags -O3 -unbox-closures -unbox-closures-factor 20)
 (foreign_stubs
  (language c)
  (flags
   -std=c11
   (:standard)
   (:include endian.sexp)
   (:include sse.sexp)
   (:include flush.sexp))
  (names persistent)))

(library
 (name part)
 (modules part)
 (foreign_stubs
  (language c)
  (flags -std=c11 (:standard))
  (names msync))
 (libraries rresult mmap persistent))

(rule
 (targets endian.sexp)
 (action
  (run ../conf/endian.exe)))

(rule
 (targets sse.sexp)
 (action
  (run ../conf/sse.exe)))

(rule
 (targets flush.sexp)
 (action
  (run ../conf/flush.exe)))
