(executable
 (name test)
 (modules test)
 (libraries art alcotest))

(executable
 (name persistent)
 (modules persistent)
 (libraries part fmt.tty logs.fmt mmap base64 rowex rowex.persistent unix
   alcotest bos))

(library
 (name fiber)
 (modules fiber)
 (libraries logs.fmt fmt.tty fmt logs unix))

(library
 (name tmp)
 (modules tmp)
 (libraries rresult fmt fpath unix))

(executable
 (name parallel_index)
 (modules parallel_index)
 (libraries part cmdliner bos rresult fmt.tty fmt.cli logs.fmt logs.cli fmt
   mmap tmp fiber rowex rowex.persistent unix))

; tests

(rule
 (alias runtest)
 (package art)
 (deps
  (:test test.exe))
 (action
  (run %{test} --color=always)))

(rule
 (alias runtest)
 (package rowex)
 (deps
  (:test persistent.exe))
 (action
  (run %{test} --color=always)))

(rule
 (alias runtest)
 (package rowex)
 (deps
  (:test parallel_index.exe)
  (:dataset small-dataset.txt))
 (action
  (run %{test} --tmp=./tmp --dataset %{dataset})))

(rule
 (alias runtest)
 (package rowex)
 (deps
  (:test parallel_index.exe)
  (:dataset small-dataset.txt))
 (action
  (run %{test} --tmp=./tmp --multiple-readers --dataset %{dataset})))
